package com.dragonnetwork.hihealth.user;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.rule.GrantPermissionRule;
import androidx.test.runner.AndroidJUnit4;

import com.dragonnetwork.hihealth.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class AcceptanceTest {

    @Rule
    public ActivityTestRule<LoginActivity> mActivityTestRule = new ActivityTestRule<>(LoginActivity.class);

    @Rule
    public GrantPermissionRule mGrantPermissionRule =
            GrantPermissionRule.grant(
                    "android.permission.SEND_SMS");

    /*
    This test mimics a potential user. We are testing all features as if we were a real end user.
    We tested add medication, change profile, add symptoms, send report and tested the UI.
    The app fails due to symptoms page.
     */
    @Test
    public void acceptanceTest() {
        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.login_email),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                1),
                        isDisplayed()));
        appCompatEditText.perform(replaceText("test5@gmail.com"), closeSoftKeyboard());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.login_password),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatEditText2.perform(replaceText("0553223939"), closeSoftKeyboard());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.login_password), withText("0553223939"),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatEditText3.perform(pressImeActionButton());

        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.login_button), withText("Login"),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction appCompatImageButton = onView(
                allOf(withContentDescription("Open navigation drawer"),
                        childAtPosition(
                                allOf(withId(R.id.tool_bar),
                                        childAtPosition(
                                                withClassName(is("android.widget.RelativeLayout")),
                                                0)),
                                1),
                        isDisplayed()));
        appCompatImageButton.perform(click());

        ViewInteraction linearLayout = onView(
                allOf(childAtPosition(
                        allOf(withId(R.id.navigation_header_container),
                                childAtPosition(
                                        withId(R.id.design_navigation_view),
                                        0)),
                        0),
                        isDisplayed()));
        linearLayout.perform(click());

        ViewInteraction textView = onView(
                allOf(withId(R.id.username), withText("test5"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                1),
                        isDisplayed()));
        textView.check(matches(withText("test5")));

        ViewInteraction editText = onView(
                allOf(withId(R.id.email), withText("test5@gmail.com"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                2),
                        isDisplayed()));
        editText.check(matches(withText("test5@gmail.com")));

        ViewInteraction editText2 = onView(
                allOf(withId(R.id.phone), withText("Phone"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                3),
                        isDisplayed()));
        editText2.check(matches(withText("Phone")));

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.doc_name), withText("Doctor Name"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                4),
                        isDisplayed()));
        textView2.check(matches(withText("Doctor Name")));

        ViewInteraction editText3 = onView(
                allOf(withId(R.id.doc_email), withText("Doctor Email"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                5),
                        isDisplayed()));
        editText3.check(matches(withText("Doctor Email")));

        ViewInteraction editText4 = onView(
                allOf(withId(R.id.doc_phone), withText("Phone"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                6),
                        isDisplayed()));
        editText4.check(matches(withText("Phone")));

        ViewInteraction linearLayout2 = onView(
                allOf(withContentDescription("Paste"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.RelativeLayout")),
                                        1),
                                3),
                        isDisplayed()));
        linearLayout2.perform(click());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.email), withText("test5@gmail.com"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                2)));
        appCompatEditText4.perform(scrollTo(), replaceText("<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<androidx.constraintlayout.widget.ConstraintLayout xmlns:android=\"http://schemas.android.com/apk/res/android\"\n    xmlns:app=\"http://schemas.android.com/apk/res-auto\"\n    xmlns:tools=\"http://schemas.android.com/tools\"\n    android:id=\"@+id/container\"\n    android:layout_width=\"match_parent\"\n    android:layout_height=\"match_parent\"\n    android:background=\"@color/backGround\"\n    tools:context=\".user.LoginActivity\">\n\n    <ImageView\n        android:id=\"@+id/imageView2\"\n        android:layout_width=\"248dp\"\n        android:layout_height=\"221dp\"\n        android:layout_gravity=\"center_horizontal\"\n        android:layout_marginTop=\"64dp\"\n        android:src=\"@drawable/logo\"\n        app:layout_constraintBottom_toTopOf=\"@+id/login_email\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintHorizontal_bias=\"0.496\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toTopOf=\"parent\"\n        app:layout_constraintVertical_bias=\"0.0\" />\n\n    <EditText\n        android:id=\"@+id/login_email\"\n        android:layout_width=\"0dp\"\n        android:layout_height=\"60dp\"\n        android:layout_marginStart=\"24dp\"\n        android:layout_marginTop=\"12dp\"\n        android:layout_marginEnd=\"24dp\"\n        android:layout_marginBottom=\"243dp\"\n        android:background=\"@drawable/backgroundborder\"\n        android:hint=\"@string/register_email\"\n        android:imeActionLabel=\"@string/register_email\"\n        android:inputType=\"textEmailAddress\"\n        android:padding=\"10dp\"\n        android:selectAllOnFocus=\"true\"\n        android:textSize=\"24sp\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toBottomOf=\"@+id/imageView2\" />\n\n    <EditText\n        android:id=\"@+id/login_password\"\n        android:layout_width=\"363dp\"\n        android:layout_height=\"60dp\"\n        android:background=\"@drawable/backgroundborder\"\n        android:hint=\"@string/register_password\"\n        android:imeActionLabel=\"@string/register_password\"\n        android:imeOptions=\"actionDone\"\n        android:inputType=\"textPassword\"\n        android:padding=\"10dp\"\n        android:selectAllOnFocus=\"true\"\n        android:textSize=\"24sp\"\n        app:layout_constraintBottom_toTopOf=\"@+id/login_button\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toBottomOf=\"@+id/login_email\"\n        app:layout_constraintVertical_bias=\"0.164\" />\n\n    <ProgressBar\n        android:id=\"@+id/loading\"\n        android:layout_width=\"0dp\"\n        android:layout_height=\"1dp\"\n        android:layout_gravity=\"center\"\n        android:layout_marginStart=\"32dp\"\n        android:layout_marginTop=\"64dp\"\n        android:layout_marginEnd=\"32dp\"\n        android:layout_marginBottom=\"64dp\"\n        android:visibility=\"gone\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"@+id/login_password\"\n        app:layout_constraintStart_toStartOf=\"@+id/login_password\"\n        app:layout_constraintTop_toTopOf=\"parent\"\n        app:layout_constraintVertical_bias=\"0.3\" />\n\n    <Button\n        android:id=\"@+id/login_button\"\n        android:layout_width=\"419dp\"\n        android:layout_height=\"68dp\"\n        android:layout_marginBottom=\"8dp\"\n        android:background=\"@color/colorTertiary\"\n        android:text=\"@string/login\"\n        android:textColor=\"@color/accent\"\n        android:textSize=\"32sp\"\n        app:layout_constraintBottom_toTopOf=\"@+id/link_signup\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\" />\n\n    <Button\n        android:id=\"@+id/link_signup\"\n        android:layout_width=\"415dp\"\n        android:layout_height=\"70dp\"\n        android:background=\"@color/colorSecondary\"\n        android:text=\"@string/register\"\n        android:textColor=\"@color/accent\"\n        android:textSize=\"32sp\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintHorizontal_bias=\"0.75\"\n        app:layout_constraintStart_toStartOf=\"parent\" />\n\n</androidx.constraintlayout.widget.ConstraintLayout>\n"));

        ViewInteraction appCompatEditText5 = onView(
                allOf(withId(R.id.email), withText("<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<androidx.constraintlayout.widget.ConstraintLayout xmlns:android=\"http://schemas.android.com/apk/res/android\"\n    xmlns:app=\"http://schemas.android.com/apk/res-auto\"\n    xmlns:tools=\"http://schemas.android.com/tools\"\n    android:id=\"@+id/container\"\n    android:layout_width=\"match_parent\"\n    android:layout_height=\"match_parent\"\n    android:background=\"@color/backGround\"\n    tools:context=\".user.LoginActivity\">\n\n    <ImageView\n        android:id=\"@+id/imageView2\"\n        android:layout_width=\"248dp\"\n        android:layout_height=\"221dp\"\n        android:layout_gravity=\"center_horizontal\"\n        android:layout_marginTop=\"64dp\"\n        android:src=\"@drawable/logo\"\n        app:layout_constraintBottom_toTopOf=\"@+id/login_email\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintHorizontal_bias=\"0.496\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toTopOf=\"parent\"\n        app:layout_constraintVertical_bias=\"0.0\" />\n\n    <EditText\n        android:id=\"@+id/login_email\"\n        android:layout_width=\"0dp\"\n        android:layout_height=\"60dp\"\n        android:layout_marginStart=\"24dp\"\n        android:layout_marginTop=\"12dp\"\n        android:layout_marginEnd=\"24dp\"\n        android:layout_marginBottom=\"243dp\"\n        android:background=\"@drawable/backgroundborder\"\n        android:hint=\"@string/register_email\"\n        android:imeActionLabel=\"@string/register_email\"\n        android:inputType=\"textEmailAddress\"\n        android:padding=\"10dp\"\n        android:selectAllOnFocus=\"true\"\n        android:textSize=\"24sp\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toBottomOf=\"@+id/imageView2\" />\n\n    <EditText\n        android:id=\"@+id/login_password\"\n        android:layout_width=\"363dp\"\n        android:layout_height=\"60dp\"\n        android:background=\"@drawable/backgroundborder\"\n        android:hint=\"@string/register_password\"\n        android:imeActionLabel=\"@string/register_password\"\n        android:imeOptions=\"actionDone\"\n        android:inputType=\"textPassword\"\n        android:padding=\"10dp\"\n        android:selectAllOnFocus=\"true\"\n        android:textSize=\"24sp\"\n        app:layout_constraintBottom_toTopOf=\"@+id/login_button\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toBottomOf=\"@+id/login_email\"\n        app:layout_constraintVertical_bias=\"0.164\" />\n\n    <ProgressBar\n        android:id=\"@+id/loading\"\n        android:layout_width=\"0dp\"\n        android:layout_height=\"1dp\"\n        android:layout_gravity=\"center\"\n        android:layout_marginStart=\"32dp\"\n        android:layout_marginTop=\"64dp\"\n        android:layout_marginEnd=\"32dp\"\n        android:layout_marginBottom=\"64dp\"\n        android:visibility=\"gone\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"@+id/login_password\"\n        app:layout_constraintStart_toStartOf=\"@+id/login_password\"\n        app:layout_constraintTop_toTopOf=\"parent\"\n        app:layout_constraintVertical_bias=\"0.3\" />\n\n    <Button\n        android:id=\"@+id/login_button\"\n        android:layout_width=\"419dp\"\n        android:layout_height=\"68dp\"\n        android:layout_marginBottom=\"8dp\"\n        android:background=\"@color/colorTertiary\"\n        android:text=\"@string/login\"\n        android:textColor=\"@color/accent\"\n        android:textSize=\"32sp\"\n        app:layout_constraintBottom_toTopOf=\"@+id/link_signup\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\" />\n\n    <Button\n        android:id=\"@+id/link_signup\"\n        android:layout_width=\"415dp\"\n        android:layout_height=\"70dp\"\n        android:background=\"@color/colorSecondary\"\n        android:text=\"@string/register\"\n        android:textColor=\"@color/accent\"\n        android:textSize=\"32sp\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintHorizontal_bias=\"0.75\"\n        app:layout_constraintStart_toStartOf=\"parent\" />\n\n</androidx.constraintlayout.widget.ConstraintLayout>\n"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText5.perform(closeSoftKeyboard());

        ViewInteraction linearLayout3 = onView(
                allOf(withContentDescription("Paste"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.RelativeLayout")),
                                        1),
                                3),
                        isDisplayed()));
        linearLayout3.perform(click());

        ViewInteraction appCompatEditText6 = onView(
                allOf(withId(R.id.email), withText("<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<androidx.constraintlayout.widget.ConstraintLayout xmlns:android=\"http://schemas.android.com/apk/res/android\"\n    xmlns:app=\"http://schemas.android.com/apk/res-auto\"\n    xmlns:tools=\"http://schemas.android.com/tools\"\n    android:id=\"@+id/container\"\n    android:layout_width=\"match_parent\"\n    android:layout_height=\"match_parent\"\n    android:background=\"@color/backGround\"\n    tools:context=\".user.LoginActivity\">\n\n    <ImageView\n        android:id=\"@+id/imageView2\"\n        android:layout_width=\"248dp\"\n        android:layout_height=\"221dp\"\n        android:layout_gravity=\"center_horizontal\"\n        android:layout_marginTop=\"64dp\"\n        android:src=\"@drawable/logo\"\n        app:layout_constraintBottom_toTopOf=\"@+id/login_email\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintHorizontal_bias=\"0.496\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toTopOf=\"parent\"\n        app:layout_constraintVertical_bias=\"0.0\" />\n\n    <EditText\n        android:id=\"@+id/login_email\"\n        android:layout_width=\"0dp\"\n        android:layout_height=\"60dp\"\n        android:layout_marginStart=\"24dp\"\n        android:layout_marginTop=\"12dp\"\n        android:layout_marginEnd=\"24dp\"\n        android:layout_marginBottom=\"243dp\"\n        android:background=\"@drawable/backgroundborder\"\n        android:hint=\"@string/register_email\"\n        android:imeActionLabel=\"@string/register_email\"\n        android:inputType=\"textEmailAddress\"\n        android:padding=\"10dp\"\n        android:selectAllOnFocus=\"true\"\n        android:textSize=\"24sp\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toBottomOf=\"@+id/imageView2\" />\n\n    <EditText\n        android:id=\"@+id/login_password\"\n        android:layout_width=\"363dp\"\n        android:layout_height=\"60dp\"\n        android:background=\"@drawable/backgroundborder\"\n        android:hint=\"@string/register_password\"\n        android:imeActionLabel=\"@string/register_password\"\n        android:imeOptions=\"actionDone\"\n        android:inputType=\"textPassword\"\n        android:padding=\"10dp\"\n        android:selectAllOnFocus=\"true\"\n        android:textSize=\"24sp\"\n        app:layout_constraintBottom_toTopOf=\"@+id/login_button\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\"\n        app:layout_constraintTop_toBottomOf=\"@+id/login_email\"\n        app:layout_constraintVertical_bias=\"0.164\" />\n\n    <ProgressBar\n        android:id=\"@+id/loading\"\n        android:layout_width=\"0dp\"\n        android:layout_height=\"1dp\"\n        android:layout_gravity=\"center\"\n        android:layout_marginStart=\"32dp\"\n        android:layout_marginTop=\"64dp\"\n        android:layout_marginEnd=\"32dp\"\n        android:layout_marginBottom=\"64dp\"\n        android:visibility=\"gone\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"@+id/login_password\"\n        app:layout_constraintStart_toStartOf=\"@+id/login_password\"\n        app:layout_constraintTop_toTopOf=\"parent\"\n        app:layout_constraintVertical_bias=\"0.3\" />\n\n    <Button\n        android:id=\"@+id/login_button\"\n        android:layout_width=\"419dp\"\n        android:layout_height=\"68dp\"\n        android:layout_marginBottom=\"8dp\"\n        android:background=\"@color/colorTertiary\"\n        android:text=\"@string/login\"\n        android:textColor=\"@color/accent\"\n        android:textSize=\"32sp\"\n        app:layout_constraintBottom_toTopOf=\"@+id/link_signup\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintStart_toStartOf=\"parent\" />\n\n    <Button\n        android:id=\"@+id/link_signup\"\n        android:layout_width=\"415dp\"\n        android:layout_height=\"70dp\"\n        android:background=\"@color/colorSecondary\"\n        android:text=\"@string/register\"\n        android:textColor=\"@color/accent\"\n        android:textSize=\"32sp\"\n        app:layout_constraintBottom_toBottomOf=\"parent\"\n        app:layout_constraintEnd_toEndOf=\"parent\"\n        app:layout_constraintHorizontal_bias=\"0.75\"\n        app:layout_constraintStart_toStartOf=\"parent\" />\n\n</androidx.constraintlayout.widget.ConstraintLayout>\n"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_sv),
